# rocket-lander

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: dynamics.md
examples/: freefall_demo.py  hover_demo.py  landing_demo.py
frontend/: index.html  package-lock.json
frontend/src/: main.ts  style.css
physics/: __init__.py  controller.py  lqr.py  lqr3d.py  mpc.py  rocket.py  rocket3d.py  state.py  state3d.py
tests/: test_animator.py  test_hud.py  test_lqr3d.py  test_physics.py  test_physics3d.py  test_pid.py  test_smoke.py
viz/: __init__.py  animator.py  export_trajectory.py  hud.py  landing3d_demo.html  manual_fly.py  pid_landing.py  render_cinematic.py  server3d.py  server_manual3d.py  sim_runner3d.py  viewer3d.html
web/: server.py
web/static/: index.html  main.js
