[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "rocket-lander"
version = "0.1.0"
description = "Landing Simulation"
requires-python = ">=3.11"
readme = "README.md"

authors = [
    { name = "Ken" },
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["physics", "viz"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
]